fix(landing page): removed horizontal scroll in smaller screen view

--- a/.dumi/global.css
+++ b/.dumi/global.css
@@ -18,3 +18,7 @@ html {
   scrollbar-width: thin;
   scrollbar-color: unset;
 }
+
+.ant-app {
+  overflow-x: hidden;
+}
